[gd_scene load_steps=28 format=3 uid="uid://b2qmi0penhs6k"]

[ext_resource type="Script" path="res://bingo_grid.gd" id="1_8mw3w"]
[ext_resource type="Script" path="res://scene_bingo.gd" id="1_d2kca"]
[ext_resource type="Shader" path="res://scene_bingo_star.gdshader" id="3_nxoos"]
[ext_resource type="Texture2D" uid="uid://453i3ynm4n58" path="res://star2.png" id="4_f1xvs"]
[ext_resource type="Texture2D" uid="uid://bqn86edfkqw32" path="res://smoke_cross.png" id="5_seca7"]
[ext_resource type="AudioStream" uid="uid://1d1y88jf6bxx" path="res://pickupCoin.wav" id="6_tc2uq"]
[ext_resource type="AudioStream" uid="uid://dfikm78inaqqy" path="res://explosion (1).wav" id="7_kcdcn"]
[ext_resource type="AudioStream" uid="uid://cxhbfp53iwhnm" path="res://explosion.wav" id="8_a1whq"]
[ext_resource type="AudioStream" uid="uid://e7e3s8ibprpu" path="res://powerUp.wav" id="9_bkum6"]
[ext_resource type="Script" path="res://sound_switch_button.gd" id="10_kt0ah"]
[ext_resource type="Texture2D" uid="uid://81rapp12mk0m" path="res://sound_on.png" id="11_dmymm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mxw53"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b1ftw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u4nrr"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_blend = true

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5yo0x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d7nkq"]

[sub_resource type="Gradient" id="Gradient_vt0pu"]
offsets = PackedFloat32Array(0.163934, 0.360656, 0.57377, 0.754098, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.057377, 0.057377, 0.057377, 1, 0.459016, 0.459016, 0.459016, 1, 0.516393, 0.516393, 0.516393, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_x488u"]
gradient = SubResource("Gradient_vt0pu")

[sub_resource type="Gradient" id="Gradient_h8vrk"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_nby2y"]
gradient = SubResource("Gradient_h8vrk")

[sub_resource type="Gradient" id="Gradient_a5ug0"]
offsets = PackedFloat32Array(0.360656, 0.795082, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.311475, 0.311475, 0.311475, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_c8db0"]
gradient = SubResource("Gradient_a5ug0")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yakca"]
shader = ExtResource("3_nxoos")
shader_parameter/ScaleMult = Vector2(0.9, 0.9)
shader_parameter/AuraProgres = 1.0
shader_parameter/Tilling = 27.9
shader_parameter/MovementDirSpeed = Vector2(-0.6, 1)
shader_parameter/MovementDirSpeed2 = Vector2(0.6, 1)
shader_parameter/Noise_Seed = Vector2(1, 1)
shader_parameter/StarSize = 0.05
shader_parameter/StarColor = Color(1, 1, 0.5, 1)
shader_parameter/size_effect = 0.1
shader_parameter/speed = 1.0
shader_parameter/highlight_strength = 0.5
shader_parameter/color_mode_toggle = true
shader_parameter/is_horizontal = true
shader_parameter/color_gradiant = SubResource("GradientTexture1D_x488u")
shader_parameter/vertical_gradient = SubResource("GradientTexture2D_c8db0")
shader_parameter/color_gradient = SubResource("GradientTexture1D_nby2y")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_b7lwm"]
lifetime_randomness = 1.0
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 128.0
inherit_velocity_ratio = 1.0
direction = Vector3(1, -1, 1)
spread = 180.0
initial_velocity_max = 457.0
angular_velocity_min = -60.0
angular_velocity_max = 60.0
gravity = Vector3(0, 98, 0)
linear_accel_min = -2.23517e-06
linear_accel_max = 100.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8t7py"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(0.5, 0.5, 0.5)
emission_shape_scale = Vector3(1.5, 1, 1.5)
emission_shape = 1
emission_sphere_radius = 128.0
gravity = Vector3(0, -98, 0)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_oingg"]
particle_flag_disable_z = true
emission_shape_offset = Vector3(0.5, 0.5, 0.5)
emission_shape_scale = Vector3(0.5, 1, 0.5)
emission_shape = 1
emission_sphere_radius = 128.0
direction = Vector3(0, -1, 0)
initial_velocity_min = 200.0
initial_velocity_max = 220.0
angular_velocity_min = -309.68
angular_velocity_max = 300.0
gravity = Vector3(0, 200, 0)

[sub_resource type="LabelSettings" id="LabelSettings_xkjer"]
font_size = 50

[node name="GameManager" type="CanvasLayer"]
script = ExtResource("1_d2kca")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="bingoGridContainer" type="GridContainer" parent="MarginContainer" node_paths=PackedStringArray("bingo_template")]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
columns = 5
script = ExtResource("1_8mw3w")
bingo_template = NodePath("bingoNumberExample")

[node name="bingoNumberExample" type="Button" parent="MarginContainer/bingoGridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_mxw53")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_b1ftw")
theme_override_styles/hover = SubResource("StyleBoxFlat_u4nrr")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_5yo0x")
theme_override_styles/normal = SubResource("StyleBoxEmpty_d7nkq")
text = "1"

[node name="Panel" type="Panel" parent="MarginContainer/bingoGridContainer/bingoNumberExample"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "總抽數:"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_right = 15

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "9999999999 次"
horizontal_alignment = 2

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
text = "抽獎記錄:"
horizontal_alignment = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
scroll_following = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -28.0
offset_top = -116.0
offset_right = 28.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0

[node name="singleGacha" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "單抽"

[node name="tenGacha" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "十連抽"

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
material = SubResource("ShaderMaterial_yakca")
position = Vector2(646, 296)
emitting = false
amount = 100
process_material = SubResource("ParticleProcessMaterial_b7lwm")
texture = ExtResource("4_f1xvs")
lifetime = 3.0
one_shot = true

[node name="ResetButton" type="Button" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -17.0
offset_top = 94.0
offset_right = 23.0
offset_bottom = 125.0
grow_horizontal = 2
text = "重置"

[node name="GPUParticles2D2" type="GPUParticles2D" parent="."]
position = Vector2(404, 285)
emitting = false
amount = 25
process_material = SubResource("ParticleProcessMaterial_8t7py")
texture = ExtResource("5_seca7")
lifetime = 0.2
one_shot = true

[node name="GPUParticles2D3" type="GPUParticles2D" parent="."]
material = SubResource("ShaderMaterial_yakca")
position = Vector2(404, 285)
emitting = false
amount = 10
process_material = SubResource("ParticleProcessMaterial_oingg")
texture = ExtResource("4_f1xvs")
lifetime = 0.5
one_shot = true

[node name="HBoxContainer" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -174.0
offset_top = -48.0
offset_right = 174.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "總抽數:"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "9999999999 次"
label_settings = SubResource("LabelSettings_xkjer")
horizontal_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_tc2uq")
max_polyphony = 10

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_kcdcn")
max_polyphony = 10

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_a1whq")
max_polyphony = 10

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_bkum6")
max_polyphony = 10

[node name="TextureButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -117.0
offset_top = 7.0
offset_right = -77.0
offset_bottom = 47.0
grow_horizontal = 0
script = ExtResource("10_kt0ah")
metadata/_edit_use_anchors_ = true

[node name="TextureButton" type="TextureRect" parent="TextureButton"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("11_dmymm")

[connection signal="button_down" from="VBoxContainer/singleGacha" to="." method="_on_single_gacha_button_down"]
[connection signal="button_down" from="VBoxContainer/tenGacha" to="." method="_on_ten_gacha_button_down"]
[connection signal="button_down" from="ResetButton" to="." method="_on_reset_button_button_down"]
[connection signal="button_down" from="TextureButton" to="TextureButton" method="_on_button_down"]
